# snakemake-executor-plugin-htcondor

./: pyproject.toml
.github/workflows/: pypi-publish.yml  tag-release.yml
snakemake_executor_plugin_htcondor/: __init__.py  schedduler.py
