[build-system]
requires = [ "poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0",]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry]
name        = "smk_htcondor"
version     = "0.0.1"
description = "A Snakemake executor plugin for submitting jobs to an HTCondor cluster."
readme      = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.17.1"
snakemake-interface-executor-plugins = "^9.0.0"
htcondor = "^24.5.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a running HTCondor AP (submits real jobs)"]

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
coverage = "^7.4.3"
pytest = "^8.1.1"
snakemake = "^8.6.0"
pre-commit = "^4.5.1"
